[tool.poetry]
name = "private-pypi"
version = "0.1.0-alpha.1"
description = "A private PyPI server powered by flexible backends."
license = "MIT"
authors = ["huntzhan <huntzhan.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/private-pypi/private-pypi"
keywords = ["private", "pypi", "packaging", "dependency"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "private_pypi_bundles" },
]

[tool.poetry.dependencies]
python = "^3.7"
private-pypi-core = "0.1.3a4"
private-pypi-github = "0.1.1a4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.29.0"
pylint = "^2.4.4"
twine = "^3.1.1"

[tool.poetry.scripts]
private_pypi = "private_pypi_bundles:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
