[tool.poetry]
name = "pywharf"
version = "0.2.2-alpha.0"
description = "A private PyPI server powered by flexible backends."
license = "MIT"
authors = ["huntzhan <huntzhan.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pywharf/pywharf"
keywords = ["private", "pypi", "packaging", "dependency"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "pywharf_bundles" },
]

[tool.poetry.dependencies]
python = "^3.7"
pywharf-core = "0.2.1"
pywharf-github = "0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.29.0"
twine = "^3.1.1"
flake8 = "^3.8.3"

[tool.poetry.scripts]
pywharf = "pywharf_bundles:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
